Change cryptowar link & fix animation on mobile

--- a/src/assets/scss/core/layout/_footer.scss
+++ b/src/assets/scss/core/layout/_footer.scss
@@ -85,10 +85,6 @@
   overflow: hidden;
   padding: 10px 0;
 
-  .marquee-wrapper:hover .marquee-list {
-    animation-play-state: paused;
-  }
-
   .marquee-content {
     width: 250%;
     display: flex;
@@ -105,20 +101,10 @@
         border: 4px solid #ffa466;
         padding: 20px 20px;
         margin: 0 20px;
-        will-change: transform, box-shadow;
-        transform: translateY(0);
-        transition: all 0.5s;
         display: flex;
         align-items: center;
         justify-content: center;
         max-width: 310px;
-
-        &:hover {
-          background-color: #fedab6;
-          transform: translateY(-5px);
-          will-change: transform, box-shadow;
-          transition: all 0.5s;
-        }
 
         .bnp-logo {
           width: 230px;
@@ -247,8 +233,26 @@
 @include media('>medium') {
 
   @if ($footer--padding__mobile != $footer--padding__desktop) {
+  .footer-bnp {
+    .marquee-item {
+      will-change: transform, box-shadow;
+      transform: translateY(0);
+      transition: all 0.5s;
 
-    .site-footer-inner {
+      &:hover {
+        background-color: #fedab6;
+        transform: translateY(-5px);
+        will-change: transform, box-shadow;
+        transition: all 0.5s;
+      }
+    }
+
+    .marquee-wrapper:hover .marquee-list {
+      animation-play-state: paused;
+    }
+  }
+
+  .site-footer-inner {
       padding: $footer--padding__desktop 0;
     }
   }
